// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubflowRouterForm should create result actions for parameters 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "name": "max",
          "type": "set_run_result",
          "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
          "value": "100",
        },
        Object {
          "name": "min",
          "type": "set_run_result",
          "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
          "value": "1",
        },
        Object {
          "flow": Object {
            "name": "My Subflow Flow",
            "uuid": "my-subflow",
          },
          "type": "enter_flow",
          "uuid": "d4a3a01c-1dee-4324-b107-4ac7a21d836f",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
        Object {
          "destination_uuid": null,
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "C",
            ],
            "category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "type": "has_run_status",
            "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
          },
          Object {
            "arguments": Array [
              "E",
            ],
            "category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "type": "has_run_status",
            "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Complete",
            "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
          },
          Object {
            "exit_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "name": "Expired",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
        ],
        "default_category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        "operand": "@child.status",
        "type": "switch",
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_subflow",
    },
  },
]
`;

exports[`SubflowRouterForm should init parameter tab 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Enter another flow
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          data-use-vue-component-wrap=""
          style="all: unset;"
        >
          <div
            class="tab size-sm tabs"
            data-passed-props="[object Object]"
            data-v-1727ddfc=""
          >
            <header
              class="tab-header"
              data-v-1727ddfc=""
            >
              <ul
                class="tab-content"
                data-v-1727ddfc=""
              >
                <li
                  class="tab-head tab-head--active"
                  data-v-1727ddfc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-1727ddfc=""
                    style="all: unset;"
                  >
                    General
                  </div>
                </li>
                <li
                  class="tab-head"
                  data-v-1727ddfc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-1727ddfc=""
                    style="all: unset;"
                  >
                    Parameters
                  </div>
                </li>
              </ul>
            </header>
            <main
              class="tab-body"
              data-v-1727ddfc=""
            >
              <div
                class="tab-panel"
                data-v-1727ddfc=""
              />
            </main>
          </div>
        </div>
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Enter another flow"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Flow to start
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-autocomplete-select bold_placeholder"
              data-passed-props="[object Object]"
              data-testid="temba_select_flow_to_start"
              data-v-4e186498=""
            >
              <div
                class="unnnic-form sm"
                data-v-48c0c241=""
                data-v-4e186498=""
              >
                <!---->
                <div
                  class="unnnic-form-input"
                  data-v-2d3b8b50=""
                  data-v-48c0c241=""
                  mask=""
                  style="position: relative;"
                  v-bind="[object Object]"
                >
                  <input
                    class="input size-sm normal has-icon-left"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconleft="search-1"
                    placeholder="My Subflow Flow"
                    size="0"
                    type="text"
                    v-bind="[object Object]"
                  />
                  <span
                    class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Confirm 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SubflowRouterForm should render 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Enter another flow
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Enter another flow"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Flow to start
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-autocomplete-select bold_placeholder"
              data-passed-props="[object Object]"
              data-testid="temba_select_flow_to_start"
              data-v-4e186498=""
            >
              <div
                class="unnnic-form sm"
                data-v-48c0c241=""
                data-v-4e186498=""
              >
                <!---->
                <div
                  class="unnnic-form-input"
                  data-v-2d3b8b50=""
                  data-v-48c0c241=""
                  mask=""
                  style="position: relative;"
                  v-bind="[object Object]"
                >
                  <input
                    class="input size-sm normal has-icon-left"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconleft="search-1"
                    placeholder="Colors"
                    size="0"
                    type="text"
                    v-bind="[object Object]"
                  />
                  <span
                    class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Confirm 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
